--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Welcome#index</h1>
-<%= link_to 'Login', login_path %>
+<h1>Welcome</h1>
+
+<% if current_user %>
+  <p>Hello, <%= current_user.name %></p>
+  <%= link_to 'Logout', logout_path %>
+<% else %>
+  <%= link_to 'Login', login_path %>
+<% end %>
