--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,26 @@
-<h1>Welcome</h1>
-
-<% if current_user %>
-  <p>Hello, <%= current_user.name %></p>
-  <%= link_to 'Logout', logout_path %>
-<% else %>
-  <%= link_to 'Login', login_path %>
-<% end %>
+<div class="container">
+  <div class="well">
+    <h1 class="text-center">Welcome to Twitier</h1>
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+  <div class="well">
+    Insert Interesting News
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+  <div class="well">
+    Twitter Feed Goes Here
+  </div>
+</div>
