--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="well">
-    <h1 class="text-center">Welcome to Twitier</h1>
+    <h1 class="text-center">Welcome to Twittier</h1>
   </div>
   <div class="well">
     Twitter Feed Goes Here
