adds image to user model

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,7 @@
       <%= image_tag "#{@user.image_url}" %>
     <% end %>
   </div>
+  <h2>Tweets</h2>
   <% 5.times do %>
     <div class="well">
       Twitter Feed Goes Here
