adds test for logging out a user also adds simplecoverage gem and flash messages for logging in and out test coverage at 100 percent

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if flash %>
+    <div id="flash"><%= render 'layouts/flash' %></div>
+  <% end %>
+
   <%= render 'layouts/navbar' %>
   <%= yield %>
 </body>
