--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav id="my-navbar" class="navbar navbar-inverse navbar-static-top" role="navigation">
+<nav id="my-navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div id="my-navbar" class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
