minor styling fixes

--- a/app/assets/stylesheets/sitewide.scss
+++ b/app/assets/stylesheets/sitewide.scss
@@ -2,7 +2,16 @@ body {
   background-color: #67BCDB;
   padding-top: 70px;
 }
+
 .well {
   background-color: #A8CD1B;
   border: 1px solid;
 }
+//
+//#user-image {
+//  display: inline-block;
+//}
+//
+//#user-name {
+//  display: inline-block;
+//}
