--- a/app/views/welcome/_user_info.html.erb
+++ b/app/views/welcome/_user_info.html.erb
@@ -1,5 +1,7 @@
-<%= image_tag "#{@user.image_url}" %>
-<h3><%= "#{@user.name}" %></h3>
-<h4><%= "@#{@user.screen_name}" %></h4>
-<h3>Following:</h3><h4><%= "#{@user.friends_count}"%></h4>
-<h3>Followers:</h3><h4><%= "#{@user.followers_count}"%></h4>
+<div id="user-image"><%= image_tag "#{@user.image_url}" %></div>
+<div id="user-name">
+  <h3><%= "#{@user.name}" %></h3>
+  <h4><%= "@#{@user.screen_name}" %></h4>
+</div>
+<h3 id="following">Following:</h3><h4><%= "#{@user.friends_count}"%></h4>
+<h3 id="followers">Followers:</h3><h4><%= "#{@user.followers_count}"%></h4>
