--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="well">
     <h3 class="text-center">
-      Please <%= link_to 'sign in', login_path %> with Twitter to continue.
+      Please <%= link_to 'Login', login_path %> with Twitter to continue.
     </h3>
   </div>
   <% else %>
