--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
       <%= render 'user_info' %>
     </div>
     <div class="well" id="new-tweet">
-      New Tweet Form
+      <%= render 'new_tweet_form' %>
     </div>
     <h2>Tweets</h2>
     <% @tweets.each do |tweet| %>
