--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,6 +12,7 @@
     <div class="well" id="user-well">
       <%= render 'user_info' %>
     </div>
+    <h2>Post a new Twit</h2>
     <div class="well" id="new-tweet">
       <%= render 'new_tweet_form' %>
     </div>
