--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <% if @user == nil %>
+  <% if current_user == nil %>
   <div class="well">
     <h1 class="text-center">Welcome to Twittier</h1>
   </div>
