--- a/app/views/welcome/_user_info.html.erb
+++ b/app/views/welcome/_user_info.html.erb
@@ -1,7 +1,7 @@
-<div id="user-image"><%= image_tag "#{@user.image_url}" %></div>
+<div id="user-image"><%= image_tag "#{current_user.image_url}" %></div>
 <div id="user-name">
-  <h3><%= "#{@user.name}" %></h3>
-  <h4><%= "@#{@user.screen_name}" %></h4>
+  <h3><%= "#{current_user.name}" %></h3>
+  <h4><%= "@#{current_user.screen_name}" %></h4>
 </div>
-<h3 id="following">Following:</h3><h4><%= "#{@user.friends_count}"%></h4>
-<h3 id="followers">Followers:</h3><h4><%= "#{@user.followers_count}"%></h4>
+<h3 id="following">Following:</h3><h4><%= "#{current_user.friends_count}"%></h4>
+<h3 id="followers">Followers:</h3><h4><%= "#{current_user.followers_count}"%></h4>
